--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ############################### Volantis ###############################
 info:
   theme_name: Volantis # This is theme's name.
-  theme_docs: https://volantis.js.org/ # This is theme's URL.
+  theme_docs: https://vlts.cc/ # This is theme's URL.
   theme_repo: https://github.com/volantis-x/hexo-theme-volantis
 # Debug 调试模式
 debug: false
